darkmap/front/static_front/galaxy.css
html {
    background-image: url(../static/blue_space_with_planets_by_darkdissolution-updCont.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-color: rgb(9, 15, 24);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

:root {
    --playerbase_color: #f8f3bc;
    --playerbase_dockable_color: #9aff9f;
    --mining_color: #9e8676;
    --obj_other_color: #92f6fa;
    --wreck_label_color: rgba(255, 179, 179, 0.8);

    /*system jump hole colors*/
    --jh_color_jumphole: red;
    --jh_color_jumpgate: gray;
    --jh_color_unstable_cargo_limit: rgba(219, 72, 55, 0.9);
    --jh_color_freighter_only: rgba(1, 255, 13, 0.9);
    --jh_color_alien: rgba(152, 69, 255, 0.9);
    --jh_color_campaign_locked: rgba(255, 136, 1, 0.9);
    --jh_color_unknown: rgba(247, 4, 255, 0.849);
}

background- {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    align-items: center;
}

top-bar- {
    display: flex;
    flex-direction: row;
}

search-bar- {
    /*useful for debug*/
    /* background-color: #00F; */
    background: #000 url(../static/nnwall.jpg) repeat scroll 0% 0%;

    box-shadow: 0em 0em 0.5em 0em #1EA6C5;
    border: 0.2em solid #1EA6C5;
    box-sizing: border-box;
}

search-bar-counterweight-,
search-bar- {
    flex-grow: 1;
    width: 250px;
}

search-bar-counterweight- {
    box-shadow: 0em 0em 0.5em 0em #1EA6C5;
    border: 0.2em solid #1EA6C5;
    box-sizing: border-box;
    background: #000 url(../static/nnwall.jpg) repeat scroll 0% 0%;

    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px;
    color: rgba(255, 255, 255, 0.4);

    font-size: 0.9rem;
}

search-bar-counterweight- a {
    color: rgba(255, 255, 255, 0.4);
}

search-bar-,
.search-input,
.search-wrap,
.search-box {
    height: 100%;
}


menu- {
    width: calc(100vh - 2.4em);
}

map-with-interface- {
    display: flex;
    flex-direction: column;
    height: calc(100vh);
    width: calc(100vh - 2.4em);
}

map- {
    width: 100%;
    height: 100%;
    user-select: none;
    touch-action: none;
    font-size: 1.45vh;
}

.panzoom-parent-galaxy {
    position: relative;
    box-sizing: border-box;

    background-color: black;
    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../static/Sirius_Map.png);
    background-size: cover;
    border: 0.2em rgb(25, 47, 96) solid;
    height: 100%;

    /*plugin adds on its own*/
    overflow: hidden;
    user-select: none;
    touch-action: none;
}

.panzoom-parent-system {
    background: rgb(9, 12, 21);

    position: relative;
    box-sizing: border-box;
    border: 0.2em rgb(25, 47, 96) solid;
    height: 100%;

    /*plugin adds on its own*/
    overflow: hidden;
    user-select: none;
    touch-action: none;
}

.panzoom {
    box-sizing: border-box;

    height: 100%;
    top: 2.4em;
    width: 100%;
    margin: 0 auto;
    box-sizing: border-box;

    /*plugin adds on its own*/
    cursor: move;
    user-select: none;
    touch-action: none;
    transform-origin: 50% 50%;
    transition: none;
    transform: scale(1) translate(0px, 0px);
}

menu- {
    row-gap: 2px;
    background: #000 url(../static/nnwall.jpg) repeat scroll 0% 0%;
    box-shadow: 0em 0em 0.5em 0em #1EA6C5;
    border: 0.2em solid #1EA6C5;
    color: #FFF;
    min-height: 60px;

    display: flex;
    flex-direction: row;
}

.menu-item {
    display: flex;
    flex-direction: column;
}

.disabled {
    color: #AAA;
}

menu- div {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    text-align: center;
}

menu- .top {
    margin-top: 5px;
}

menu- .bottom {
    margin-bottom: 5px;
}


centeralizer- {
    height: 100%;
    width: 100%;
    position: absolute;
}

system- {
    position: absolute;
    height: 1vh;
    width: 1vh;
    margin-top: -0.5vh;
    margin-left: -0.5vh;
    border-color: white;
}

.jumphole {
    position: absolute;
    height: 1.5em;
    width: 1.5em;
    margin-top: -0.75em;
    margin-left: -0.75em;
    border-color: white;
}

.tradelane {
    position: absolute;
    height: 0.75em;
    width: 0.75em;
    margin-top: -0.375em;
    margin-left: -0.375em;
    border-color: white;
}

.zoomedOut .tradelane img {
    visibility: hidden;
}

.zoomedOut .tradelane {
    background: gray;
    height: 0.2em;
    width: 0.3em;
    margin-top: -0.1em;
    margin-left: -0.15em;
}

.zoomedOut .base img {
    visibility: hidden;
}

.zoomedOut .base {
    height: 0.25em;
    width: 0.25em;
    margin-top: -0.125em;
    margin-left: -0.125em;
    background: white;
}

.zoomedOut .playerbase {
    height: 0.25em;
    width: 0.25em;
    margin-top: -0.125em;
    margin-left: -0.125em;
    background: var(--playerbase_color);
}

.zoomedOut .mining,
.zoomedIn .mining {
    height: 0.25em;
    width: 0.25em;
    margin-top: -0.125em;
    margin-left: -0.125em;
    background: var(--mining_color);
}

.star {
    border-color: white;
    border-radius: 50%;
}

.base {
    border-color: white;
    height: 0.75em;
    width: 0.75em;
    margin-top: -0.375em;
    margin-left: -0.375em;
}

.playerbase {
    border-color: white;
    height: 0.75em;
    width: 0.75em;
    margin-top: -0.375em;
    margin-left: -0.375em;
}

.mining {
    border-color: white;
    height: 0.75em;
    width: 0.75em;
    margin-top: -0.375em;
    margin-left: -0.375em;
}

.planet {
    border-color: white;
    height: 0.75em;
    width: 0.75em;
    margin-top: -0.375em;
    margin-left: -0.375em;
    border-radius: 50%;
}

.wreck {
    width: 0.4em;
    height: 0.4em;
    margin-top: -0.2em;
    margin-left: -0.2em;
}

.obj_other,
.obj_disco_encounter {
    width: 0.4em;
    height: 0.4em;
    margin-top: -0.2em;
    margin-left: -0.2em;
}

.zoomedOut .obj_other {
    height: 0.25em;
    width: 0.25em;
    margin-top: -0.125em;
    margin-left: -0.125em;
    background: var(--obj_other_color);
}

.zoomedOut .obj_disco_encounter {
    height: 0.5em;
    width: 0.5em;
    margin-top: -0.5em;
    margin-left: -0.5em;
    background: rgba(255, 106, 6, 0.9);
    box-shadow: 0em 0em 0.4em 0.2em rgba(255, 106, 6, 0.5);
}

.zoomedOut .obj_other img,
.zoomedOut .obj_disco_encounter img {
    visibility: hidden;
}

.obj_other img,
.obj_disco_encounter img {
    width: 10px;
    height: 10px;
}


.planet img {
    border-radius: 50%;
}

.jumphole,
.base,
.playerbase,
.mining {
    z-index: 100;
}

.tradelane,
.star,
.planet,
.wreck {
    z-index: 99;
}

obj- {
    position: absolute;
    cursor: pointer;
}

obj- img {
    width: 100%;
    height: 100%;
    position: absolute;
}

system-:hover,
obj-:hover {
    box-shadow: 0em 0em 0.4em 0.2em rgb(237, 112, 7), inset 0em 0em 0.15em 0em rgb(237, 112, 7) !important;
    color: rgb(255, 167, 6);
}

.is-target {
    display: block !important;
    animation: pulse 1.5s infinite;
}

@-webkit-keyframes pulse {
    0% {
        -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.8);
    }

    70% {
        -webkit-box-shadow: 0 0 0 20px rgba(204, 169, 44, 0);
    }

    100% {
        -webkit-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
    }
}

@keyframes pulse {
    0% {
        -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.8);
        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0.8);
    }

    70% {
        -moz-box-shadow: 0 0 0 20px rgba(204, 169, 44, 0);
        box-shadow: 0 0 0 20px rgba(204, 169, 44, 0);
    }

    100% {
        -moz-box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
        box-shadow: 0 0 0 0 rgba(204, 169, 44, 0);
    }
}

system-:hover system-label,
obj-:hover system-label {
    background-color: rgba(0, 0, 0, 0.45);
    border-radius: 0.2em;

    box-shadow: 0em 0em 0.4em 0.2em rgb(237, 112, 7), inset 0em 0em 0.15em 0em rgb(237, 112, 7);
    color: rgb(255, 167, 6);
}

.playerbase system-label {
    color: var(--playerbase_color);
}

.playerbase system-label.pob_dockable {
    color: var(--playerbase_dockable_color);
}

ul.text_align_left * {
    text-align: left;
}

.mining system-label {
    color: var(--mining_color);
}

.atmosphere {
    border-radius: 50%;
    border: 1px solid rgba(255, 255, 0, 0.3);
    z-index: -1;
    box-sizing: border-box;
}

.zoomedOut .jumphole img {
    visibility: hidden;
}

.zoomedOut .jumphole {
    background: var(--jh_color_jumphole);
}

.zoomedOut .jumphole.jh_jumpgate {
    background: var(--jh_color_jumpgate);
}

.zoomedOut .jumphole.jh_unstable_cargo_limit {
    background: var(--jh_color_unstable_cargo_limit);
}

.zoomedOut .jumphole.jh_fighter_only {
    background: var(--jh_color_freighter_only);
}

.zoomedOut .jumphole.jh_alien {
    background: var(--jh_color_alien);
}

.zoomedOut .jumphole.jh_campaign_locked {
    background: var(--jh_color_campaign_locked);
}

.zoomedOut .jumphole.jh_unknown {
    background: var(--jh_color_unknown);
}

.zoomedOut .jumphole {
    border-radius: 100%;
    width: 0.5em;
    height: 0.5em;
    margin-top: -0.25em;
    margin-left: -0.25em;
}

.zoomedIn .jumphole img {
    visibility: inherit;
}

cycle- {
    border-color: #2299F5;
    border-width: 3px;
    border-radius: 100%;
    border-style: solid;
    background-color: rgb(36, 36, 36);
    left: -3px;
    top: -3px;
    position: absolute;
    height: 1vh;
    width: 1vh;
}

.galaxy system-label {
    z-index: 10;
}

obj-,
system- {
    display: flex;
    flex-direction: column;
    align-items: center;
}

system-label {
    position: absolute;
    top: clamp(0.1rem, 2vh, 10rem);
    display: inline-block;
    white-space: nowrap;
    color: white;
    font-family: var(--font-family);
    pointer-events: auto;
    background-color: rgba(0, 0, 0, 0.3);
}

.galaxy system-label {
    font-size: clamp(0.55rem, 1.4vh, 3rem);
}

.system system-label {
    font-size: clamp(0.65rem, 1.5vh, 3.3rem);
}

/* .zoomed08 map-.system system-label {
    font-size: clamp(0.65rem, 1.2vh, 3.3rem);
}

.zoomed06 map-.system system-label {
    font-size: clamp(0.35rem, 1.0vh, 3.3rem);
}

.zoomed04 map-.system system-label {
    font-size: clamp(0.2rem, 0.8vh, 3.3rem);
} */

system-title {
    position: absolute;
    bottom: 0.1em;
    color: white;
    text-align: center;
    width: 100%;
    font-family: var(--font-family);
    font-size: 3em;
    padding: 0;
    margin: 0;
    color: rgb(135, 195, 224);

    display: block;
    font-weight: bold;
    margin-bottom: 10px;
}

connection- {
    position: absolute;
    z-index: -1;
}

line- {
    position: absolute;
    width: 0.125em;
    background-color: rgba(69, 150, 255, 0.9);
    display: block;
}



@media (min-aspect-ratio: 1) {
    background- {
        height: 100vh;
        width: 100vw;
    }
}

@media (max-aspect-ratio: 1) {
    background- {
        height: 100vh;
        width: 100vh;
    }
}

@media (min-aspect-ratio: 6/4) {
    top-bar- {
        width: 100%;
    }
}

@media (max-aspect-ratio: 6/4) {
    top-bar- {
        flex-direction: column-reverse;
    }

    search-bar- {
        width: 100% !important;
    }

    search-bar-counterweight- {
        display: none;
    }
}

.obj_fallback_unclassified {
    width: 0.275em !important;
    height: 0.275em !important;
    margin-top: -0.1375em;
    margin-left: -0.1375em;
    background: #EC7F1F;
}

.obj_fallback_shape img {
    display: none;
}

.obj_fallback_shape img {
    display: none;

    width: 0.275em !important;
    height: 0.275em !important;
    margin-top: -0.1375em;
    margin-left: -0.1375em;
    background: #EC7F1F;
}

.obj_fallback_nnm_sm_navbuoy {
    background: #36c9c2 !important;
    transform: rotate(45deg);
    transform-origin: center center;
}

.obj_fallback_nnm_sm_navbuoy system-label {
    transform: rotate(-45deg);
}

.obj_fallback_nnm_sm_mining {
    background: #fce300 !important;
}

